--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ python-jose==3.4.0
 passlib==1.7.4
 bcrypt==4.3.0
 cryptography==44.0.3
+PyJWT==2.8.0
 
 # Data validation and serialization
 pydantic==2.11.4
